tests/miniJava/neg/001520_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new new int [ 0 ] ; } }
